<?xml version="1.0" encoding="UTF-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:paddingBottom="20dp" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/cb_goal"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/black" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/cb_goal_desc"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_action_expand" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/card_no_border"
            android:padding="10dp"
            android:text="@string/cb_goal_sub_1"
            android:textColor="@android:color/black" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/card_no_border"
            android:padding="10dp"
            android:text="@string/cb_goal_sub_2"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/black" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/card_no_border"
            android:padding="10dp"
            android:text="@string/cb_goal_sub_3"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/black" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/card_no_border"
            android:padding="10dp"
            android:text="@string/cb_goal_sub_4"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/black" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/card_no_border"
            android:padding="10dp"
            android:text="@string/cb_goal_sub_5"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/black" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/our_philosophy"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/black" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/our_philosophy_sub"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_action_expand" />


        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/card_no_border"
            android:padding="10dp"
            android:text="@string/our_activity_sub_1"
            android:textColor="@color/black" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/card_no_border"
            android:padding="10dp"
            android:text="@string/our_activity_sub_2"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/black" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/card_no_border"
            android:padding="10dp"
            android:text="@string/our_activity_sub_3"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/black" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/card_no_border"
            android:padding="10dp"
            android:text="@string/our_activity_sub_4"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/black" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/card_no_border"
            android:padding="10dp"
            android:text="@string/our_activity_sub_5"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/black" />
    </LinearLayout>

</ScrollView>