<?xml version="1.0" encoding="UTF-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:paddingBottom="20dp" >



        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/card_no_border"
            android:scaleType="fitXY"
            android:src="@drawable/sd_tree" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/card_no_border"
            android:padding="10dp"
            android:text="@string/tree"
            android:textColor="@android:color/black" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/card_no_border"
            android:scaleType="fitXY"
            android:src="@drawable/sd_bird" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/card_no_border"
            android:padding="10dp"
            android:text="@string/bird"
            android:textColor="@android:color/black" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/card_no_border"
            android:scaleType="fitXY"
            android:src="@drawable/sd_flower" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/card_no_border"
            android:padding="10dp"
            android:text="@string/flower"
            android:textColor="@android:color/black" />
    </LinearLayout>

</ScrollView>