<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:materialdesign="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
        <LinearLayout
            android:id="@+id/notice"
            android:layout_width="fill_parent"
            android:layout_height="0px"
            android:layout_weight="1"
            android:layout_marginTop="12dp"
            android:background="@drawable/selector_list"
            android:clickable="true" >
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginLeft="32dp"
                android:src="@drawable/notice" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center|left"
                android:layout_marginLeft="32dp"
                android:text="@string/notices"
                android:textColor="@color/black"
                android:textSize="16dp" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="114dp"
            android:background="#cfcfcf" />

        <LinearLayout
            android:id="@+id/notice_parent"
            android:layout_width="fill_parent"
            android:layout_height="0px"
            android:layout_weight="1"
            android:background="@drawable/selector_list"
            android:clickable="true" >
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginLeft="32dp"
                android:src="@drawable/notice_parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center|left"
                android:layout_marginLeft="32dp"
                android:text="@string/notices_parents"
                android:textColor="@color/black"
                android:textSize="16dp" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="114dp"
            android:background="#cfcfcf" />

        <LinearLayout
            android:id="@+id/schoolevent"
            android:layout_width="fill_parent"
            android:layout_height="0px"
            android:layout_weight="1"
            android:background="@drawable/selector_list"
            android:clickable="true" >
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginLeft="32dp"
                android:src="@drawable/school_event" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center|left"
                android:layout_marginLeft="32dp"
                android:text="@string/schoolevent"
                android:textColor="@color/black"
                android:textSize="16dp" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="114dp"
            android:background="#cfcfcf" />

        <LinearLayout
            android:id="@+id/meal"
            android:layout_width="fill_parent"
            android:layout_height="0px"
            android:layout_weight="1"
            android:background="@drawable/selector_list"
            android:clickable="true" >
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginLeft="32dp"
                android:src="@drawable/meal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center|left"
                android:layout_marginLeft="32dp"
                android:text="@string/meal"
                android:textColor="@color/black"
                android:textSize="16dp" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="114dp"
            android:background="#cfcfcf" />

        <LinearLayout
            android:id="@+id/schedule"
            android:layout_width="fill_parent"
            android:layout_height="0px"
            android:layout_weight="1"
            android:background="@drawable/selector_list"
            android:clickable="true" >
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginLeft="32dp"
                android:src="@drawable/schedule" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center|left"
                android:layout_marginLeft="32dp"
                android:text="@string/schedule"
                android:textColor="@color/black"
                android:textSize="16dp" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="114dp"
            android:background="#cfcfcf" />

        <LinearLayout
            android:id="@+id/schoolinfo"
            android:layout_width="fill_parent"
            android:layout_height="0px"
            android:layout_weight="1"
            android:background="@drawable/selector_list"
            android:clickable="true" >
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginLeft="32dp"
                android:src="@drawable/schoolinfo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center|left"
                android:layout_marginLeft="32dp"
                android:text="@string/schoolinfo"
                android:textColor="@color/black"
                android:textSize="16dp" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="114dp"
            android:background="#cfcfcf" />

        <LinearLayout
            android:id="@+id/schoolintro"
            android:layout_width="fill_parent"
            android:layout_height="0px"
            android:layout_marginBottom="18dp"
            android:layout_weight="1"
            android:background="@drawable/selector_list"
            android:clickable="true" >
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginLeft="32dp"
                android:src="@drawable/schoolintro" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center|left"
                android:layout_marginLeft="32dp"
                android:text="@string/schoolintro"
                android:textColor="@color/black"
                android:textSize="16dp" />
        </LinearLayout>
    </LinearLayout>

    <com.gc.materialdesign.views.ButtonFloat
        android:id="@+id/appinfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="18dp"
        android:background="@color/public_color"
        materialdesign:animate="true"
        materialdesign:icon="@drawable/info" />

</RelativeLayout>